<resources>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="login">登录</string>
    <string name="show_pwd">显示密码</string>
    <string name="save_pwd">记住密码</string>

    <string name="app_name">GPS</string>
    <string name="position">当前位置</string>

    <string name="bdPosition">百度定位的位置</string>
    <string name="startLocation">开始百度定位</string>
    <string name="stopLocation">停止定位</string>
    <string name="location_base">基础定位</string>
    <string name="map_base">基础地图</string>
    <string name="base_map">地图连续定位</string>
    <string name="http_failed">网络错误12121212</string>

    <string name="start_xc">开始定位</string>
    <string name="now_state">当前状态</string>
    <string name="xc_time">连续用时</string>
    <string name="xc_mileage">总计里程</string>

    <string name="home_01">无图定位</string>
    <string name="home_02">基础定位</string>
    <string name="home_03">高级定位</string>
    <string name="home_13">系统设置</string>

    <string name="update_pwd">修改密码</string>
    <string name="set_time">设置时间间隔</string>
    <string name="add">添加</string>
    <string name="click_choose">点击选择</string>
    <string name="pic_video">拍摄照片和视频</string>
</resources>






