<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.wwm.gps.activity.LoginActivity">


    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/mv_map_yzt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_state"
                    android:textColor="@color/road_deep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_xc_state"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle_frame_blue"
                    android:text="准备定位"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xc_time"
                    android:textColor="@color/road_deep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_xc_time"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/circle_frame_blue"
                    android:text="0时0分"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xc_mileage"
                    android:textColor="@color/road_deep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_xc_mileage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/circle_frame_blue"
                    android:text="0米"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_xc"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="@string/start_xc"
                android:textColor="@color/write"
                android:textSize="18sp"
                android:background="@drawable/btn_circle_blue"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
